# truffle

./: Cargo.toml  README.md  flake.nix  truffle.toml
.github/workflows/: bench.yml  test.yml
sql/: 01-basic.sql  02-fail.sql
truffle-cli/: Cargo.toml
truffle-cli/src/: main.rs
truffle-core/: Cargo.toml
truffle-core/benches/: select.rs
truffle-core/src/: column.rs  dialect.rs  expr.rs  func.rs  immutable.rs  lib.rs  resolve.rs  returning.rs  ty.rs
truffle-core/src/action/: create_table.rs  delete.rs  drop.rs  insert.rs  join.rs  mod.rs  update.rs
truffle-core/src/action/query/: mod.rs  select.rs
truffle-core/src/misc/: config.rs  mod.rs
truffle-core/tests/: avg.rs  between.rs  coalesce.rs  count.rs  create_table.rs  delete.rs  drop.rs  insert.rs  is_distinct.rs  is_null.rs  is_unknown.rs  like.rs  min_max.rs  select.rs  subquery.rs  substring.rs  update.rs
truffle-loader/: Cargo.toml
truffle-loader/src/: config.rs  lib.rs  migrations.rs
truffle-macro/: Cargo.toml
truffle-macro/src/: lib.rs
truffle-sim/: Cargo.toml
truffle-sim/src/: column.rs  expr.rs  lib.rs  table.rs  ty.rs
truffle-sim/src/action/: create_table.rs  delete.rs  drop.rs  insert.rs  join.rs  mod.rs  query.rs
truffle-sim/src/action/query/: mod.rs  select.rs
truffle-sqlx/: Cargo.toml
truffle-sqlx-demo/: Cargo.toml
truffle-sqlx-demo/migrations/: 01_create_account_table.sql  20250718212011_create_account_table.sql  20250718212050_create_item_table.sql  20250718212053_create_orders_table.sql
truffle-sqlx-demo/src/: main.rs
truffle-sqlx-macros/: Cargo.toml
truffle-sqlx-macros/src/: lib.rs
truffle-sqlx/migrations/: 20250712100335_create_user_table.sql
truffle-sqlx/src/: lib.rs  main.rs
truffle-sqlx/src/convert/: mod.rs  postgres.rs  sqlite.rs
truffle-use-macro/: Cargo.toml
truffle-use-macro/migrations/: 01-create-user-table.sql
truffle-use-macro/src/: main.rs
