[workspace]
resolver = "2"
members = [
    "truffle-cli",
    "truffle-core",
    "truffle-loader",
    "truffle-sqlx",
    "truffle-sqlx-demo",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
uuid = "1.17.0"
serde_json = "1.0.140"
time = "0.3.41"
