[package]
name = "truffle"
version = "0.1.0"
edition = "2024"

[dependencies]
truffle-sim = { path = "../truffle-sim" }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

clap = { version = "4.5.41", features = ["derive"] }
rustyline = "16.0.0"
