[package]
name = "truffle-cli"
version.workspace = true
edition = "2024"

[[bin]]
name = "truffle"
path = "src/main.rs"

[dependencies]
truffle = { path = "../truffle-core" }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

clap = { version = "4.5.41", features = ["derive"] }
rustyline = "16.0.0"
