[package]
name = "truffle"
version.workspace = true
edition = "2024"

[features]
default = []

# Enable all features
all = ["time", "json", "uuid", "serde"]

# Enable Time
time = ["dep:time"]

# Enable JSON
json = ["dep:serde_json"]

# Enable UUID
uuid = ["dep:uuid"]

# Enable Serde
serde = ["indexmap/serde", "sqlparser/serde"]

[dependencies]
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

sqlparser = "0.57.0"
indexmap = "2.10.0"
itertools = "0.14.0"

uuid = {  version = "1.17.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
time = { version = "0.3.41", features = ["parsing"], optional = true }
