[package]
name = "truffle"
version.workspace = true
edition = "2024"

[features]
default = []

# Enable all features
all = ["time", "json", "uuid", "serde"]

# Enable Time
time = ["dep:time"]

# Enable JSON
json = ["dep:serde_json"]

# Enable UUID
uuid = ["dep:uuid"]

# Enable Serde
serde = ["indexmap/serde", "sqlparser/serde"]

[dependencies]
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

sqlparser = "0.57.0"
indexmap = "2.10.0"
itertools = "0.14.0"

uuid = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
time = { workspace = true, features = ["parsing"], optional = true }
