[package]
name = "truffle-sim"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["indexmap/serde", "sqlparser/serde"]

[dependencies]
serde = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

sqlparser = "0.57.0"
indexmap = "2.10.0"
uuid = "1.17.0"
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["parsing"] }
itertools = "0.14.0"
