[package]
name = "truffle-sqlx-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "derive", "migrate", "uuid", "time", "sqlite" ] }
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full"] }
truffle-sqlx = { path = "../truffle-sqlx" }
uuid = "1.17.0"
