[package]
name = "truffle-sqlx-demo"
edition = "2024"
version.workspace = true

[dependencies]
truffle-sqlx = { path = "../truffle-sqlx" }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "derive", "migrate", "uuid", "time", "sqlite" ] }
tokio = { version = "1.46.1", features = ["full"] }
