[package]
name = "truffle-sqlx"
version = "0.1.0"
edition = "2024"

[features]
default = []

# Enable all features
all = ["time", "json", "uuid", "serde"]

# Enable Time
time = ["dep:time", "truffle/time"]

# Enable JSON
json = ["dep:serde_json", "truffle/json"]

# Enable UUID
uuid = ["dep:uuid", "truffle/uuid"]

# Enable Serde
serde = ["truffle/serde"]

[dependencies]
uuid = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
time = { workspace = true, optional = true }

truffle = { path = "../truffle-core" }
truffle-sqlx-macros = { path = "../truffle-sqlx-macros" }
